# EVA-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  EVA-Engine.sln  README.md  cpp.hint
.codesnippets/: Component.snippet
EVA/: Application.cpp  Application.hpp  Asset.cpp  Asset.hpp  Bounds.hpp  ClassMap.hpp  Component.cpp  Component.hpp  ComponentMap.hpp  FileSystem.hpp  FrameBuffer.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Light.cpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialMap.cpp  MaterialMap.hpp  Mesh.cpp  Mesh.hpp  ModelManager.hpp  Range.hpp  Scene.cpp  Scene.hpp  ScopeTimer.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
EVA-Engine/: EVA-Engine.vcxproj  EVA-Engine.vcxproj.filters  cpp.hint
EVA-Engine/EVA/: Application.cpp  Application.hpp  Asset.cpp  Asset.hpp  ClassMap.hpp  Component.cpp  Component.hpp  ComponentMap.cpp  ComponentMap.hpp  ConstPointer.hpp  Core.hpp  FileSystem.hpp  GameObject.cpp  GameObject.hpp  Input.cpp  Input.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  MaterialMap.cpp  MaterialMap.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  Physics.cpp  Physics.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Skybox.cpp  Skybox.hpp  (+2 more)
EVA-Engine/EVA/Components/: BoxCollider.cpp  BoxCollider.hpp  Camera.cpp  Camera.hpp  Collider.hpp  FollowTarget.cpp  FollowTarget.hpp  FreeLook.cpp  FreeLook.hpp  HideOnStart.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  SceneCamera.hpp  Transform.cpp  Transform.hpp  Transformer.cpp  Transformer.hpp
EVA-Engine/EVA/Editor/: EditorWindows.cpp  EditorWindows.hpp  InspectorFields.hpp  SceneEditor.hpp
EVA-Engine/EVA/Materials/: ShadowMaterial.cpp  ShadowMaterial.hpp  SkyBoxMaterial.cpp  SkyBoxMaterial.hpp  StandardMaterial.cpp  StandardMaterial.hpp
EVA-Engine/EVA/OpenGL/: GLCaller.cpp  GLCaller.hpp  IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  (+1 more)
EVA-Engine/source/: TestComponent.cpp  TestComponent.hpp  main.cpp
EVA/Components/: BoxCollider.cpp  BoxCollider.hpp  Camera.cpp  Camera.hpp  Collider.hpp  FollowTarget.cpp  FollowTarget.hpp  FreeLook.cpp  FreeLook.hpp  HideOnStart.cpp  HideOnStart.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  SceneCamera.hpp  Transform.cpp  Transform.hpp  Transformer.cpp  Transformer.hpp
EVA/Editor/: EditorWindows.cpp  EditorWindows.hpp  InspectorFields.cpp  InspectorFields.hpp  SceneEditor.hpp
EVA/Materials/: BlinnPhongMaterial.cpp  BlinnPhongMaterial.hpp  PBRMaterial.cpp  PBRMaterial.hpp  ShadowMaterial.cpp  ShadowMaterial.hpp  SkyBoxMaterial.cpp  SkyBoxMaterial.hpp  StandardMaterial.cpp  StandardMaterial.hpp
EVA/OpenGL/: GLCaller.cpp  GLCaller.hpp  IndexBuffer.cpp  OpenGL.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
EVA/Parsers/: GameObjectParser.hpp  ISerializeable.cpp  ISerializeable.hpp  Json.hpp  MaterialParser.hpp  SceneParser.hpp  ShaderParser.hpp
EVA/Quadtree/: Quadtree.cpp  Quadtree.hpp  QuadtreeMesh.hpp  QuadtreeNode.cpp  QuadtreeNode.hpp
EVA/Terrain/: NormalMapRenderer.hpp  Quadtree.cpp  Quadtree.hpp  SpatMapRenderer.hpp  Terrain.cpp  Terrain.hpp  TerrainLayer.hpp  TerrainMaterial.cpp  TerrainMaterial.hpp  TerrainMesh.hpp
EVA/UI/: Button.cpp  SpriteRenderer.cpp  Text.cpp
EVA/Utilities/: EquirectangularToCubemap.hpp  TextureUtilities.hpp
EVA/Water/: Water.cpp  Water.hpp  WaterMaterial.cpp  WaterMaterial.hpp
EVA/include/: EVA.hpp
assets/gold/: gold.mat
assets/prefabs/: uvcube.prefab
assets/scenes/: main.scene  terrain.scene
assets/terrain/: granite.mat  grass.mat  ground11.mat  ground17.mat  ground21.mat  ground_forest.mat  rock.mat  rock_moss.mat  sand.mat
assets/water/: water.shader  water_wireframe.shader
source/: TestComponent.cpp  TestComponent.hpp  main.cpp
(+128 files in other folders)
